# RogueHeroes

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  browser-debug.js  generate_archer_vertical_attacks.py  generate_lancer_vertical.py  generate_melee_vertical_attacks.py  generate_vertical_melee.py  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .env.example  SKILL.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: SKILL.md  __init__.py  router.py
backend/app/api/routes/: __init__.py  combat.py  game.py  heroes.py  npc.py
backend/app/models/: SKILL.md  __init__.py  combat.py
backend/app/schemas/: __init__.py  combat.py
backend/app/services/: SKILL.md  __init__.py  combat_engine.py  gemini_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: __init__.py  test_combat.py
backend/tests/services/: __init__.py  test_combat_engine.py
battlefields/: battlefield_cave_assault.json  battlefield_encampment_assault.json  battlefield_river_skirmish.json  battlefield_rocky_terrain_skirmish.json
frontend/: SKILL.md  battlefield-editor.html  editor.html  index.html  overworld.html  package-lock.json  package.json  vite.config.ts
frontend/public/audio/: horse_walking.m4a
frontend/public/battlefields/: battlefield1.json
frontend/src/: App.tsx  BattlefieldEditorApp.tsx  MapEditorApp.tsx  OverworldApp.tsx  battlefield-editor.tsx  editor.tsx  main.tsx  overworld.tsx
frontend/src/api/: SKILL.md  combat.ts  index.ts  npc.ts
shared/: __init__.py  constants.py
(+76 files in other folders)
